@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-10-13T00:43:55Z",
+  "timestamp" : "2023-10-13T08:12:51Z",
   "count_outdated" : 1389,
   "uniques_outdated" : 752,
-  "count" : 1413,
-  "uniques" : 766,
+  "count" : 1414,
+  "uniques" : 767,
   "clones" : [
     {
       "timestamp": "2023-09-29T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count_decinc": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -106,6 +106,15 @@
     },
     {
       "timestamp": "2023-10-12T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-10-13T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
