@@ -4,7 +4,7 @@
   "clones": [
     {
       "timestamp": "2023-09-29T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -59,6 +59,11 @@
     },
     {
       "timestamp": "2023-10-12T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-10-13T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
