@@ -1,3 +1,12 @@
+2023-10-13T08:12:51Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6505717056 # 1986
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-13
+* notice: last 14d: unq all: 3 24
+* notice: prev accum: outdated-unq outdated-all / unq all: 752 1389 / 766 1413
+* notice: next accum: outdated-unq outdated-all / unq all: 752 1389 / 767 1414
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-09-29 2023-10-13]
+
 2023-10-13T00:43:55Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6502546782 # 1985
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-13
